[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/background1.png" type="Texture" id=1]
[ext_resource path="res://assets/UItheme.tres" type="Theme" id=2]
[ext_resource path="res://src/UI/InfoToMain.gd" type="Script" id=3]
[ext_resource path="res://src/Sound/buttonClick.tscn" type="PackedScene" id=4]

[node name="MoreInfo" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_use_anchors_": false
}

[node name="background1" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer" type="HSplitContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -720.0
margin_top = 64.0
margin_right = 720.0
margin_bottom = 683.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="HSplitContainer"]
modulate = Color( 1, 1, 1, 0.847059 )
margin_right = 1440.0
margin_bottom = 619.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Story" type="Label" parent="HSplitContainer/Panel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -293.5
margin_right = 578.0
margin_bottom = 294.5
text = "To go right press
 d or right arrow key

to go left press
a or left arrow key

to jump hold
w or up arrow key

golden nuts are 
worth 10 nuts!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Story2" type="Label" parent="HSplitContainer/Panel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -852.0
margin_top = -294.0
margin_bottom = 294.0
text = "backgrounds by kyle hicks
KYLEHICKS1998@GMAIL.COM
ENEMY DESIGN BY ADAM BRUCE
ADAMBRUCE100@HOTMAIL.CO.UK
FONTS
HIGHER BY MARISSA PASSOS
FUTURE SPORE BY DISASTER FONTS
MUSIC BY EUKL @ STEREO SURGEON
JUMP SOUND
elektroproleter
enemy killing player sound
jorickhoofd"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 240.0
margin_right = 1920.0
margin_bottom = 678.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -342.0
margin_top = -121.0
margin_right = 342.0
margin_bottom = -55.0
text = "Back to main menu"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
info_scene_path = "res://src/Screens/MainMenu.tscn"

[node name="buttonClick" parent="MainMenu" instance=ExtResource( 4 )]
[connection signal="button_down" from="MainMenu" to="MainMenu" method="_on_MainMenu_button_down"]
[connection signal="button_up" from="MainMenu" to="MainMenu" method="_on_MainMenu_button_up"]
